tests/baselines/reference/functionCall18.errors.txt
tests/cases/compiler/functionCall18.ts(4,1): error TS2554: Expected 2 arguments, but got 1.


==== tests/cases/compiler/functionCall18.ts (1 errors) ====
    // Repro from #26835
    declare function foo<T>(a: T, b: T);
    declare function foo(a: {});
    foo<string>("hello");
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 tests/cases/compiler/functionCall18.ts:2:31: An argument for 'b' was not provided.
    